--- a/dashboard.html
+++ b/dashboard.html
@@ -106,25 +106,33 @@
     const fecha = ahora.toLocaleDateString("es-GT");
     const hora = ahora.toLocaleTimeString("es-GT", { hour: '2-digit', minute: '2-digit' });
 
+    const fechaISO = fechaISOHoy();
     let tipoRegistro = "entrada";
 
     // Detectar si ya existe una entrada para hoy
     const res = await fetch(WEB_APP_URL, {
       method: "POST",
+      //headers: { "Content-Type": "application/json" },
       body: JSON.stringify({
         action: "getAsistencia",
         usuario,
-        fechaIni: fecha,
-        fechaFin: fecha
+        fechaIni: fechaISO,
+        fechaFin: fechaISO
       })
     });
     const data = await res.json();
-    const tieneEntrada = data.data.some(row => row[0] === usuario && row[1] === fecha);
-    const tieneSalida = data.data.some(row => row[0] === usuario && row[1] === fecha && row[6]);
+    
+    //const tieneEntrada = data.data.some(row => row[0] === usuario && row[1] === fechaISO);
+    const tieneEntrada = data.data.some(row => {const fechaRow = typeof row[1] === "string" ? row[1].substring(0, 10) : row[1];return row[0] === usuario && fechaRow === fechaISO;});
+    //const tieneSalida = data.data.some(row => row[0] === usuario && row[1] === fechaISO && row[6]);
+    const tieneSalida = data.data.some(row => row[0] === usuario && row[1] === fechaISO && row[6]);
+    
+
 
     // Definir tipo
-    if (tieneEntrada && !tieneSalida) tipoRegistro = "salida";
+    //if (tieneEntrada && !tieneSalida) tipoRegistro = "salida";
 
+    tipoRegistro = (tieneEntrada && !tieneSalida) ? 'salida' : 'entrada';
     // Mostrar popup
     if (perfil !== "admin") {
   tituloModal.textContent = `Registro de ${tipoRegistro}`;
